delay plugin load/unload until we save

BUG: 438893